# music_controller

./: pyproject.toml
music_controller/: db.sqlite3
music_controller/api/: models.py  serializers.py  urls.py  views.py
music_controller/api/migrations/: 0001_initial.py  0002_alter_room_code.py
music_controller/frontend/: package-lock.json  urls.py  views.py
music_controller/frontend/static/css/: index.css
music_controller/frontend/static/frontend/: main.js  main.js.LICENSE.txt
music_controller/frontend/static/src/: index.js
music_controller/frontend/static/src/components/: App.js  CreateRoomPage.js  HomePage.js  Room.js  RoomJoinPage.js
music_controller/music_controller/: settings.py  urls.py
music_controller/spotify/: credentials.py  urls.py  utils.py  views.py
music_controller/spotify/migrations/: 0001_initial.py
